hphp/test/zend/bad/zend/bug60909_1.php.expectf
error(require(notfound.php): failed to open stream: %s)
HipHop Warning: %a
Stack trace:
#0 %sbug60909_1.php(8): {closure}(2, 'require(notfoun...', '%s', 8, Array)
#1 %sbug60909_1.php(8): require()
#2 {main}
  thrown in %sbug60909_1.php on line 5
HipHop Fatal error: %a


!!!shutdown!!!